Button color fix

--- a/calendar/css/style.css
+++ b/calendar/css/style.css
@@ -113,9 +113,10 @@ button > * {
   display: none;
   font-size: 90%;
   /* font-style: italic; */
-  /* border: 2px solid rgb(42, 42, 251); */
-  border: 2px solid rgb(125, 117, 238);
-  background-color: rgb(125, 117, 238);
+  /* border: 2px solid rgb(125, 117, 238);
+  background-color: rgb(125, 117, 238); */
+  border: 2px solid rgb(83, 83, 255);
+  background-color: rgb(83, 83, 255);
 }
 
 .card {
@@ -136,7 +137,7 @@ button > * {
 
 #current-day {
   /* border: 4px double rgb(125, 117, 238); */
-  border: 4px double rgb(125, 117, 238);
+  border: 4px double rgb(83, 83, 255);
   border-radius: 5px;
   padding: 5px;
 }
