Fix CSS btn margiin Fix setTimeout to 0 ms

--- a/calendar/css/style.css
+++ b/calendar/css/style.css
@@ -58,7 +58,8 @@ option,
   display: inline-block;
 }
 
-div.input-row:nth-child(2) {
+div.input-row:nth-child(2),
+div.input-row:nth-child(3) {
   margin-left: 4px;
 }
 
